[gd_scene load_steps=7 format=3 uid="uid://dv4g57qgdfg33"]

[ext_resource type="Script" uid="uid://chlk3v2pashqe" path="res://Games/fruit_catcher/Scenes/Game/game.gd" id="1_ln2h6"]
[ext_resource type="PackedScene" uid="uid://dqhaj3fx1ah8r" path="res://Games/fruit_catcher/Scenes/Paddle/paddle.tscn" id="2_gwu2e"]
[ext_resource type="Texture2D" uid="uid://d04q4wfpcqudk" path="res://Games/fruit_catcher/assets/vecteezy_deep-forest-scene-with-trees-cartoon-background-vector_9577135-1.jpg" id="2_y3kpf"]
[ext_resource type="AudioStream" uid="uid://c6b4darsin5cb" path="res://Games/fruit_catcher/assets/bgm_action_5.mp3" id="4_ln2h6"]
[ext_resource type="AudioStream" uid="uid://nunov43qa4b0" path="res://Games/fruit_catcher/assets/spell1_0.wav" id="5_y3kpf"]
[ext_resource type="FontFile" uid="uid://b54m8n1w2ouio" path="res://Assets/Fonts/Bungee-Regular.ttf" id="8_5dybn"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ln2h6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(575, 374.5)
scale = Vector2(0.598958, 0.659894)
texture = ExtResource("2_y3kpf")

[node name="Paddle" parent="." instance=ExtResource("2_gwu2e")]
position = Vector2(549, 620)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ln2h6")
volume_db = -15.0

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_y3kpf")
volume_db = 12.0

[node name="PauseButton" type="Button" parent="."]
offset_left = 971.0
offset_top = 58.0
offset_right = 1056.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("8_5dybn")
text = "Pause"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 5.0
offset_top = 10.0
offset_right = 178.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("8_5dybn")
theme_override_font_sizes/font_size = 30

[node name="Button" type="Button" parent="."]
offset_left = 12.0
offset_top = 582.0
offset_right = 161.0
offset_bottom = 636.0
theme_override_fonts/font = ExtResource("8_5dybn")
theme_override_font_sizes/font_size = 20
text = "‚¨ÖÔ∏è logout
"

[node name="CountdownLabel" type="Label" parent="."]
offset_left = 435.0
offset_top = 50.0
offset_right = 638.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0.93408, 0.93408, 0.93408, 1)
theme_override_fonts/font = ExtResource("8_5dybn")
theme_override_font_sizes/font_size = 25
text = "Time left:"

[node name="CountdownTimer" type="Timer" parent="."]

[node name="TopScoreLabel" type="Label" parent="."]
offset_left = 928.0
offset_top = 13.0
offset_right = 1096.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0.9813, 0.98219, 0.986231, 1)
theme_override_fonts/font = ExtResource("8_5dybn")
theme_override_font_sizes/font_size = 25
text = "HIGH SCORE"
horizontal_alignment = 1

[node name="Window" type="Window" parent="."]
auto_translate_mode = 1
initial_position = 2
size = Vector2i(610, 200)
visible = false

[node name="Label" type="Label" parent="Window"]
offset_left = -1.0
offset_top = 17.0
offset_right = 615.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("8_5dybn")
text = "ASSESSMENT NOT COMPLETED YET!
PLEASE COMPLETE THE ASSESSMENT BEFORE ENABLING ADAPTIVE ROM."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Window"]
offset_left = 176.0
offset_top = 128.0
offset_right = 404.0
offset_bottom = 168.0
theme_override_constants/separation = 20

[node name="do_asses" type="Button" parent="Window/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_5dybn")
text = "Do assessment"

[node name="close_asses" type="Button" parent="Window/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_5dybn")
text = "Close"

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = -23.0
offset_right = 1159.0
offset_bottom = 680.0
color = Color(0, 0, 0, 0.784314)

[node name="GameOverLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 427.0
offset_top = 277.0
offset_right = 689.0
offset_bottom = 338.0
theme_override_colors/font_color = Color(0.894922, 0.894922, 0.894922, 1)
theme_override_colors/font_shadow_color = Color(0.546968, 0.546968, 0.546968, 1)
theme_override_fonts/font = ExtResource("8_5dybn")
theme_override_font_sizes/font_size = 40
text = "GAME OVER!"

[node name="GameoverLogout" type="Button" parent="ColorRect/GameOverLabel"]
layout_mode = 0
offset_left = -39.0
offset_top = 91.0
offset_right = 103.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("8_5dybn")
theme_override_font_sizes/font_size = 25
text = "‚¨ÖÔ∏è Logout"

[node name="RetryButton" type="Button" parent="ColorRect/GameOverLabel"]
layout_mode = 0
offset_left = 136.0
offset_top = 91.0
offset_right = 272.0
offset_bottom = 137.0
theme_override_fonts/font = ExtResource("8_5dybn")
theme_override_font_sizes/font_size = 25
text = "üîÑ:Retry"

[node name="AdaptProm" type="CheckButton" parent="."]
offset_left = 471.0
offset_top = 14.0
offset_right = 628.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("8_5dybn")
text = "Adapt prom"

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_logout_button_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
[connection signal="pressed" from="Window/HBoxContainer/do_asses" to="." method="_on_do_asses_pressed"]
[connection signal="pressed" from="Window/HBoxContainer/close_asses" to="." method="_on_close_asses_pressed"]
[connection signal="pressed" from="ColorRect/GameOverLabel/GameoverLogout" to="." method="_on_gameover_logout_pressed"]
[connection signal="pressed" from="ColorRect/GameOverLabel/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="toggled" from="AdaptProm" to="Paddle" method="_on_adapt_prom_toggled"]
